--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* In your index.css or App.css */
+/* body {
+  background-image: url('./assets/banners/banner.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0;
+} */
+
 
 /* Custom component styles */
 @layer components {
